fixed the alignment and position of pressed-button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,16 +200,21 @@ body{
 /* --------- KEYBOARD --------- */
 .button_pressed{
 		position:absolute;
-		top:-70px;
-		left:-15px;
 		width:55px;
 		height:107px;
 		background:url(../images/page_bg/button-pressed.png) no-repeat;
+        -webkit-transform: translate(-50%,-100%);
+        -moz-transform: translate(-50%,-100%);
+        -ms-transform: translate(-50%,-100%);
+        transform: translate(-50%,-100%);
 		background-size:55px 107px;
 		z-index:2;
 		font-size:40px;
 		font-weight:bold;
-		line-height:60px;}
+		line-height:60px;
+        text-align: center;
+        color: black;
+}
 @font-face {
 	font-family: 'iPhone keyboard';
 	src:url(../images/page_bg/iphone-keyboard.ttf);}
@@ -227,12 +232,12 @@ body{
 	border-radius:0 0 2px 2px;
 	position:relative;}
 
-	#iphone-keyboard li {
+	#iphone-keyboard > div.row {
 		text-align:center;
 		margin:.5em .1em .25em;
 		list-style:none;}
 	
-	#iphone-keyboard li:first-child {margin-top:.3em;}
+	#iphone-keyboard > div.row:first-child {margin-top:.3em;}
 	
 	#iphone-keyboard button,
 	#iphone-keyboard button.specialkey:active {
@@ -322,8 +327,8 @@ body{
 /* --------- SMALLER SCREEN --------- */
 	@media screen and (max-width: 479px) {
 	#iphone-keyboard {max-width:480px;}
-	#iphone-keyboard li {margin-top:1em;}
-	#iphone-keyboard li:first-child {margin-top:.7em;}
+	#iphone-keyboard > div.row {margin-top:1em;}
+	#iphone-keyboard > div.row:first-child {margin-top:.7em;}
 	#iphone-keyboard button {
 		width:8.25%;
 		padding:.16em 0;}
